# mara

./: CMakeLists.txt  README  checkLogsForErrors.sh  logs.sh  main.c  main.cpp  mara.sh  out.txt  out_fast.txt  result.csv  showlogs.sh  special_tests.sh  tester.sh
include/: BucketList.h  CodeBlock.h  FreeSpace.h  Logger.h  Mara.h  MemDump.h  OccupiedSpace.h  Page.h  PageList.h  Space.h  Statistic.h  Test.h  interface.h  predefined.h
src/: BucketList.cpp  CodeBlock.cpp  FreeSpace.cpp  Logger.cpp  Mara.cpp  MemDump.cpp  OccupiedSpace.cpp  Page.c  Page.cpp  PageList.cpp  Space.cpp  Statistic.c  Statistic.cpp  Test.cpp  interface.c  interface.cpp
testExecutable/: main.c
testscripts/: eval2csv  evalresults  mara.sh  special_tests.sh  tester.sh
